use list.of because performance + immutability